# monitorbookprices

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yml  pyproject.toml
examples/01_add_book/: add_book.ipynb  newbook.xlsx
examples/02_update_prices/: database.db  update_prices.ipynb
examples/03_see_discounts/: 03_discounts.ipynb  database.db  discounts.ipynb
examples/04_wipe_book/: wipe_book.ipynb  wiped.db
monitorbookprices/: __init__.py
monitorbookprices/book/: general.py
monitorbookprices/data/: database.py  excel.py
monitorbookprices/scrape/: general.py
src/monitorbookprices/: __init__.py
src/monitorbookprices/analysis/: plots.py  prices.py
src/monitorbookprices/book/: general.py
src/monitorbookprices/data/: database.py
src/monitorbookprices/scrape/: general.py  sites.py
tests/: test_book.py  test_dataframes.py
tests/data/test_dataframes/: database.db  database.xlsx
