[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "monitorbookprices"
version = "1.2.0"
description = "Monitor book prices for some italian, english, and german online bookshops."
authors = [
    {name = "Andrea Petrocchi", email = "andrea.petrocchi@mpsd.mpg.de"},
]
readme = "README.md"
license = {file="LICENSE"}
requires-python = ">=3.7,<3.13"
dependencies = [
    "beautifulsoup4",
    "bokeh",
    "fastexcel",
    "hvplot",
    "ipykernel",
    "lxml",
    "openpyxl",
    "polars",
    "pyarrow",
    "selenium",
    "SQLAlchemy",
    "xlsx2csv",
    "xlsxwriter",
]

[project.urls]
Source = "https://github.com/andrea-petrocchi/monitorbookprices"
Issues = "https://github.com/andrea-petrocchi/monitorbookprices/issues"

[project.optional-dependencies]
pre-commit = [
    "pre-commit",
    "ruff",
]
test = [
    "pytest",
]

[tool.ruff]
target-version = "py39"
line-length = 88
indent-width = 4
respect-gitignore = true

[tool.ruff.lint]
# Ruff default rules, pydocstyle, and pycodestyle warnings
select = ["D", "E4", "E7", "E9", "F", "W"]
ignore = [
    "D107", # undocumented-public-init
]

[tool.ruff.lint.per-file-ignores]
"tests" = ["S101"] # Use of `assert` detected

[tool.ruff.lint.pycodestyle]
max-doc-length = 88

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.format]
quote-style = "double"
